[package]
name = "hyperloglog"
version = "0.1.0"
authors = ["Vivien Maisonneuve <v.maisonneuve@gmail.com>"]
edition = "2021"
description = "A hyperloglog implementation in Rust"
documentation = "https://vivienm.github.io/rust-hyperloglog/hyperloglog/"
repository = "https://github.com/vivienm/rust-hyperloglog/"
license = "MIT"

[dependencies]
bitvec = { version = "1.0.0", default-features = false, features = ["alloc"] }
